--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dummy/repo.git"
+    "url": "https://github.com/DATEx2/smart-navigation-extension"
   },
   "engines": {
     "vscode": "^1.60.0"
