--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publisher": "DATEx2",
   "displayName": "DATEx2 Smart Navigation",
   "icon": "assets/icon.webp",
-  "version": "0.1.22",
+  "version": "0.1.26",
   "repository": {
     "type": "git",
     "url": "https://github.com/DATEx2/smart-navigation-extension"
@@ -16,7 +16,7 @@
   ],
   "activationEvents": [
     "onLanguage:json",
-    "workspaceContains:website/db/api/products",
+    "workspaceContains:tools/ecwid/db/products",
     "onCommand:datex2.toggleProductFile",
     "onCommand:datex2.toggleTranslationFile"
   ],
