--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publisher": "DATEx2",
   "displayName": "DATEx2 Smart Navigation",
   "icon": "assets/icon.webp",
-  "version": "0.1.64",
+  "version": "0.1.74",
   "repository": {
     "type": "git",
     "url": "https://github.com/DATEx2/smart-navigation-extension"
@@ -18,6 +18,7 @@
     "onLanguage:json",
     "onLanguage:javascript",
     "onLanguage:html",
+    "onLanguage:css",
     "workspaceContains:db/products",
     "onCommand:datex2.toggleProductFile",
     "onCommand:datex2.toggleTranslationFile"
